--- a/html/table2.html
+++ b/html/table2.html
@@ -47,7 +47,7 @@
       </tr>
     </table>
     <br /><br />
-    <h1>테이블의 행 합치기</h1>
+    <h1>ㅗ</h1>
     <table style="width: 100%">
       <tr>
         <td>참치</td>
@@ -62,6 +62,29 @@
       <tr>
         <td>고등어</td>
         <td>돌고래</td>
+      </tr>
+    </table>
+    <br /><br />
+    <table style="width: 100%">
+      <tr>
+        <td colspan="5">1</td>
+      </tr>
+      <tr>
+        <td colspan="5">2</td>
+      </tr>
+      <tr>
+        <td rowspan="3">3</td>
+        <td rowspan="3">4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td colspan="2">8</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td colspan="3">10</td>
       </tr>
     </table>
   </body>
