--- a/HTM/src/main/webapp/index.html
+++ b/HTM/src/main/webapp/index.html
@@ -13,7 +13,7 @@
       해당 언어에 맞추어 발음이나 억양 목소리등을 다르게 읽음
 -->
 <html lang="kr">
-    <!--
+  <!--
         <head></head>
         -웹브라우저에는 보이지 않지만 index.html파일(웹문서)와 관련된 설정정보를 넣음
         -head태그는 <meta>, <title></title>이라는 태그로 구성
@@ -25,21 +25,19 @@
         <title></title>태그
         - index.html 문서가 웹브라우저 화면에 출력할때 나타날 창 제목 설정
     -->
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>웹 개발 입문</title>
-    </head>
-    <!--
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>웹 개발 입문</title>
+  </head>
+  <!--
         실제로 웹 브라우저 중앙화면에 출력되어 보이는 내용을 코드로 작성할 영역
     -->
-    <body>
-        <h1>웹 개발 기초</h1>
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JS</p>
-        해윙
-
-
-    </body>
+  <body>
+    <h1>웹 개발 기초</h1>
+    <p>HTML</p>
+    <p>CSS</p>
+    <p>JS</p>
+    해윙
+  </body>
 </html>
