--- a/HTM/src/main/webapp/link.html
+++ b/HTM/src/main/webapp/link.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <!--
         _blank 새탭에서 열기
         _self 현재탭에서 열기 default는 _self
     -->
     <a href="https://www.naver.com" target="_blank">
-        기사양반, 네이버로 갑시다 !
+      <img src="images/link.png" />
+      기사양반, 네이버로 갑시다 !
     </a>
-    <br>
-    <a href="https://www.google.com">
-        기사양반, 이번엔 구글입니다 !
-    </a>
-    <br>
-    <a href="tel:010-4765-9083">01047659083
-    </a>
-    <br>
-    <a href="mailto:jdm2131@naver.com">
-        내 이메일임 !
-    </a>
-</body>
+    <br />
+    <a href="https://www.google.com"> 기사양반, 이번엔 구글입니다 ! </a>
+    <br />
+    <a href="tel:010-4765-9083">01047659083 </a>
+    <br />
+    <a href="mailto:jdm2131@naver.com"> 내 이메일임 ! </a>
+  </body>
 </html>
