--- a/HTM/src/main/webapp/prac1.html
+++ b/HTM/src/main/webapp/prac1.html
@@ -7,8 +7,6 @@
     <style></style>
   </head>
   <body>
-  
-    <iframe src="index.html" style:"330px"></iframe>
     <h1>수습 국원 모집</h1>
     <h2>방송에 관심 있는 새내기 여러분 환영합니다</h2>
     <p>
@@ -30,6 +28,8 @@
       <li>수습기간 활동 중 소정의 활동비 지급</li>
       <li>정기자로 진급하면 장학금 지급</li>
     </ol>
-    <img src="images/mic.jpg" width="600px" />
+    <a href="prac2.html" target="_blank">
+      <img src="images/mic.jpg" width="600px" />
+    </a>
   </body>
 </html>
