--- a/HTM/src/main/webapp/prac2.html
+++ b/HTM/src/main/webapp/prac2.html
@@ -23,21 +23,21 @@
     <h1>수습 국원 지원 양식</h1>
     <table>
       <tr>
-        <td rowspan="3">개인정보</td>
-        <td>이름</td>
+        <th rowspan="3">개인정보</th>
+        <th>이름</th>
         <td></td>
       </tr>
       <tr>
-        <td>학번</td>
+        <th>학번</th>
         <td></td>
       </tr>
       <tr>
-        <td>연락처</td>
+        <th>연락처</th>
         <td></td>
       </tr>
       <tr>
-        <td>지원분야</td>
-        <td colspan="3"></td>
+        <th>지원분야</th>
+        <td colspan="2"></td>
       </tr>
     </table>
   </body>
