--- a/HTM/src/main/webapp/form2.html
+++ b/HTM/src/main/webapp/form2.html
@@ -18,8 +18,22 @@
                       default는 빈공백, 비밀번호 필드에는 사용하지 않는 속성
         - maxlength : 최대길이를 설정
         4. type="search" , type = "url", type="email", type="tel"
-        5. type="checkbox", type="raide"
+        - search : 검색을 위한 텍스트 필드로 만듦
+        - url : 웹서버 하드에 특정자원을 요청하기위한 텍스트 필드
+        - email : 이메일 입력을 위한 텍스트 필드, 입력한 이메일 형식에 맞지 않으면 오류 메시지 띄움
+        - tel : 전화번호 입력을 위한 텍스트필드, 모바일 페이지에선 전화가 걸림
+
+        5. type="checkbox", type="radio"
+        - checkbox : 여러개를 체크할 수 있는 박스
+        - radio : 개중에 하나만 선택할 수 있는 박스
+
+        6. type checkbox와 radio의 주요 다른 속성들
+        - value : 선택한 체크박스나 라디오 버튼을 서버페이지로 알려줄 때 넘겨줄 값을 지정
+        여러개 체크를 하고 그 체크를 했을때 넘겨줄 값을 지정해서 그 값을 넘겨줌, 필수 속성
+        - checked속성 : 최초에 체크된 상태로 화면에 띄움 
+        - 
     -->
+    <!-- 실습. 배송정보 입력 디자인폼 만들기-->
     <form action="">
       <fieldset>
         <label for="">아이디 :</label>
@@ -29,12 +43,74 @@
         <input type="submit" value="로그인" />
       </fieldset>
     </form>
-    이름<input type="search" /><br />
-    <input type="url" /><br />
-    <input type="tel" /><br />
-    <input type="email" />
-    <input type="checkbox" name="" id="" />등산 <input type="checkbox" />게임
-    <br />
-    <input type="radio" name="res" />예 <input type="radio" name="res" />아니오
+    search : <input type="search" /><br />
+    url : <input type="url" /><br />
+    tel : <input type="tel" /><br />
+    email :<input type="email" /><br />
+    <br /><br /><br />
+    <h1>레드향 주문하기</h1>
+    <form action="">
+      <fieldset>
+        <legend>상품 선택</legend>
+      </fieldset>
+      <fieldset>
+        <legend>배송 정보</legend>
+        <ul id="shop">
+          <li>
+            <label for="user_name">이름</label>
+            <input type="text" id="user_name" />
+          </li>
+          <li>
+            <label for="addr">배송 주소</label>
+            <input type="text" id="addr" />
+          </li>
+          <li>
+            <label for="mail">이메일 주소</label>
+            <input type="email" id="mail" />
+          </li>
+          <li>
+            <label for="phone">전화번호</label>
+            <input type="tel" id="phone" />
+          </li>
+        </ul>
+      </fieldset>
+    </form>
+    <!-- 체크박스와 라디오 버튼을 삽입하는 폼-->
+    <form action="">
+      <fieldset>
+        <legend>상품 선택</legend>
+        <p><b>주문할 상품을 선택해 주세요.</b></p>
+        <ul>
+          <li>
+            <input type="checkbox" value="s_3" />
+            <label for="">선물용 3kg</label>
+            <input type="number" name="" id="" />개
+          </li>
+          <li>
+            <input type="checkbox" value="s_5" />
+            <label for="">선물용 5kg</label>
+            <input type="number" />개
+          </li>
+          <li>
+            <input type="checkbox" value="h_3" />
+            <label for="">가정용 3kg</label>
+            <input type="number" />개
+          </li>
+          <li>
+            <input type="checkbox" value="h_5" />
+            <label for="">가정용 5kg</label>
+            <input type="number" />개
+          </li>
+        </ul>
+        <p><b>포장 선택</b></p>
+        <ul>
+          <li><input type="radio" name="gift" value="yes" />선물 포장</li>
+          <li>
+            <input type="radio" name="gift" value="no" checked />선물 포장 안 함
+          </li>
+          <li><input type="radio" name="gift" value="self" />선물 포장 셀프</li>
+        </ul>
+      </fieldset>
+    </form>
   </body>
 </html>
