--- a/HTM/src/main/webapp/css/asterrisk.html
+++ b/HTM/src/main/webapp/css/asterrisk.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>외부 스타일 시트</title>
+    <title>Document</title>
     <style>
-      p {
+      * {
         color: red;
       }
     </style>
   </head>
   <body>
-    <p>내부 스타일 시트 방법으로 CSS를 적용해 보세요</p>
+    <h1>전체 선택자</h1>
+    <p>전체 선택자는 모든 요소를 한번에 선택</p>
   </body>
 </html>
