--- a/HTM/src/main/webapp/css/inline.html
+++ b/HTM/src/main/webapp/css/inline.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>외부 스타일 시트</title>
+    <title>인라인 스타일 시트</title>
   </head>
   <body>
-    <p style="color: red">인라인 스타일 시트 방법으로 CSS를 적용해 보세요</p>
+    <p style="color: darkslategray; font-size: 24px">
+      인라인 스타일 시트 방법으로 CSS를 적용해 보세요
+    </p>
   </body>
 </html>
