--- a/HTM/src/main/webapp/css/inline.html
+++ b/HTM/src/main/webapp/css/inline.html
@@ -7,7 +7,7 @@
     <title>인라인 스타일 시트</title>
   </head>
   <body>
-    <p style="color: darkslategray; font-size: 24px">
+    <p style="color: darkslategray; font-style: italic">
       인라인 스타일 시트 방법으로 CSS를 적용해 보세요
     </p>
   </body>
