--- a/HTM/src/main/webapp/css/external.html
+++ b/HTM/src/main/webapp/css/external.html
@@ -9,7 +9,8 @@
       css파일을 외부에 만들어놓고 .css파일의 코드 내용을 .html파일로 불러오는 방법
       <link rel="stylesheet" href="css파일의 경로">
     -->
-    <link rel="stylesheet" href="/HTM/src/main/webapp/css/" />
+    <link rel="stylesheet" href="/HTM/src/main/webapp/css/h1.css" />
+    <link rel="stylesheet" href="/HTM/src/main/webapp/css/style.css" />
   </head>
   <body>
     <p>외부 스타일 시트 방법으로 CSS를 적용해 보세요</p>
