--- a/HTM/src/main/webapp/css/selector/basic-selectors/asterisk.html
+++ b/HTM/src/main/webapp/css/selector/basic-selectors/asterisk.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      /*전체 요소를 전부 선택해서 스타일 설정*/
       * {
         color: red;
       }
