--- a/HTM/src/main/webapp/css/external.html
+++ b/HTM/src/main/webapp/css/external.html
@@ -11,6 +11,10 @@
     -->
     <link rel="stylesheet" href="/HTM/src/main/webapp/css/h1.css" />
     <link rel="stylesheet" href="/HTM/src/main/webapp/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="/HTM/src/main/webapp/css/selector/기본선택자/"
+    />
   </head>
   <body>
     <p>외부 스타일 시트 방법으로 CSS를 적용해 보세요</p>
