--- a/HTM/src/main/webapp/css/selector/basic-selectors/class_selector.html
+++ b/HTM/src/main/webapp/css/selector/basic-selectors/class_selector.html
@@ -1,3 +1,7 @@
+<!--
+    클래스 선택자 .
+    - 클래스 선택자는 class 속성값으로 태그 선택
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,8 +18,9 @@
     </style>
   </head>
   <body>
+    <!--클래스는 중복된 값 설정 가능-->
     <h1 class="red">클래스 선택자</h1>
-    <p class="blue">이건 class가 블루</p>
-    <p class="blue">맨위는 red겠죠 ?</p>
+    <p class="red">이거까지 class가 red</p>
+    <p class="blue">이건 blue겠죠 ?</p>
   </body>
 </html>
