--- a/HTM/src/main/webapp/css/selector/basic-selectors/id_selector.html
+++ b/HTM/src/main/webapp/css/selector/basic-selectors/id_selector.html
@@ -1,3 +1,11 @@
+<!--
+    id selector
+    HTML태그에서 사용할 수 있는 id속성값을 이용해 HTML 태그를 선택
+    id는 고유한 값으로 중복되면 안된다
+    #id속성값{
+      css 코드
+    }
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,6 +25,8 @@
     </style>
   </head>
   <body>
+    <!--id속성에 대한 값은 고유해야 함
+    다른 태그에 id를 또 title로 중복된 값을 줄 수 없다-->
     <h1 id="title">아이디 선택자</h1>
     <p id="blue">id 속성값을 이용해 선택자를 지정</p>
     <p id="red">gd</p>
