--- a/HTM/src/main/webapp/css/text/text-align.html
+++ b/HTM/src/main/webapp/css/text/text-align.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>text-align</title>
     <style>
+      h1 {
+        font-size: 40px;
+        color: rgba(255, 0, 0, 0.514);
+        text-shadow: 1px 1px 4px #000000;
+      }
       p {
-        width:600px;
-        border:1px solid #222;
-        padding:10px;
-        margin:10px;
+        width: 600px;
+        border: 1px solid #222;
+        padding: 10px;
+        margin: 10px;
       }
       .center {
         text-align: center;
@@ -18,9 +23,22 @@
       }
     </style>
   </head>
-  <body>    
-    <p>껍질에 붉은 빛이 돌아 <b><big>레드향</big>(감평甘平)</b>이라 불린다. 레드향은 한라봉과 귤을 교배한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
-    <p class="center">껍질에 붉은 빛이 돌아 <b><big>레드향</big>(감평甘平)</b>이라 불린다. 레드향은 한라봉과 귤을 교배한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
-    <p class="justify">껍질에 붉은 빛이 돌아 <b><big>레드향</big>(감평甘平)</b>이라 불린다. 레드향은 한라봉과 귤을 교배한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
+  <body>
+    <h1>살려줘</h1>
+    <p>
+      껍질에 붉은 빛이 돌아 <b><big>레드향</big>(감평甘平)</b>이라 불린다.
+      레드향은 한라봉과 귤을 교배한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고
+      통통하다.
+    </p>
+    <p class="center">
+      껍질에 붉은 빛이 돌아 <b><big>레드향</big>(감평甘平)</b>이라 불린다.
+      레드향은 한라봉과 귤을 교배한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고
+      통통하다.
+    </p>
+    <p class="justify">
+      껍질에 붉은 빛이 돌아 <b><big>레드향</big>(감평甘平)</b>이라 불린다.
+      레드향은 한라봉과 귤을 교배한 것으로 일반 귤보다 2~3배 크고, 과육이 붉고
+      통통하다.
+    </p>
   </body>
 </html>
