css 혼자 공부 해봄 ! product 이거 선 얇게한다고 고생헀다 !

--- a/HTM/src/main/webapp/css/08/border/border-5.html
+++ b/HTM/src/main/webapp/css/08/border/border-5.html
@@ -10,7 +10,7 @@
 	</style>
 </head>
 <body>
-  <img src="images/cat.jpg">
-	<img id="round" src="images/cat.jpg">
+  <img src="/JavaScript/HTM/src/main/webapp/css/08/images/cat.jpg">
+	<img id="round" src="/JavaScript/HTM/src/main/webapp/css/08/images/cat.jpg">
 </body>
 </html>
