--- a/HTM/src/main/webapp/css/08/border/border-6.html
+++ b/HTM/src/main/webapp/css/08/border/border-6.html
@@ -10,7 +10,7 @@
 	</style>
 </head>
 <body>
-	<img src="images/photo.jpg">
-	<img id="circle" src="images/photo.jpg">
+	<img src="/JavaScript/HTM/src/main/webapp/css/08/images/photo.jpg">
+	<img id="circle" src="/JavaScript/HTM/src/main/webapp/css/08/images/photo.jpg">
 </body>
 </html>
