--- a/HTM/src/main/webapp/css/text/text-transform.html
+++ b/HTM/src/main/webapp/css/text/text-transform.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <title>text-transform</title>
-  <style>    
-    .trans1 {
-      text-transform: capitalize;
-    }
-    .trans2 {
-      text-transform: uppercase;
-    }
-    .trans3 {
-      text-transform: lowercase;
-    }
-  </style>
-</head>
-<body>
-  <p class="trans1">html</p> 
-  <p class="trans2">css</p>
-  <p class="trans3">javascript</p>
-</body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <title>text-transform</title>
+    <style>
+      .trans1 {
+        text-transform: capitalize;
+      }
+      .trans2 {
+        text-transform: uppercase;
+      }
+      .trans3 {
+        text-transform: lowercase;
+      }
+      .trans4 {
+        text-transform: full-width;
+      }
+    </style>
+  </head>
+  <body>
+    <p class="trans1">html</p>
+    <p class="trans2">css</p>
+    <p class="trans3">javascript</p>
+    <p class="trans4">ABCDEFG</p>
+    <p>ABCDEFG</p>
+  </body>
+</html>
