--- a/JavaScript/edu/2자바스크립트기초문법/operator/comparingOperator.html
+++ b/JavaScript/edu/2자바스크립트기초문법/operator/comparingOperator.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
     <script type="text/javascript">
-        
+      let a = 10;
+      let b = 20;
+      let c = 10;
+      let f = "20";
+      let res;
+      res = a > b;
+      console.log("res", res);
+      document.write(res + "<br>");
+
+      res = a < b;
+      console.log("res", res);
+      document.write(res + "<br>");
+
+      res = b == f;
+      console.log("res", res);
+      document.write(res + "<br>");
+
+      res = a != b;
+      console.log("res", res);
+      document.write(res + "<br>");
+
+      res = b === f;
+      console.log("res", res);
+      document.write(res + "<br>");
+
+      res = b !== f;
+      document.write(res + "<br>");
+
+      res = b != f;
+      document.write(res + "<br>");
     </script>
-</body>
+  </head>
+  <body></body>
 </html>
