--- a/JavaScript/edu/2자바스크립트기초문법/var/texttable_c.html
+++ b/JavaScript/edu/2자바스크립트기초문법/var/texttable_c.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-	
-	<script type="text/javascript">
-		
-		//변수 t에 초깃값으로 "<table border='1'>" 문자열이 저장되어 있다.
-		var t = "<table border='1'>";
-			t +=	"<tr>"; 
-			t +=    	"<td>1</td><td>2</td><td>3</td>";
-			t +=    "</tr>";
-			t +=	"<tr>"; 
-			t +=    	"<td>4</td><td>5</td><td>6</td>";
-			t +=    "</tr>";					
-		    t += "</table>";
-		    
-		    document.write(t);	
-	</script>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Insert title here</title>
 
+    <script type="text/javascript">
+      //변수 t에 초깃값으로 "<table border='1'>" 문자열이 저장되어 있다.
+      var t = "<table border='1'>";
+      t += "<tr>";
+      t += "<td>1</td><td>2</td><td>3</td>";
+      t += "</tr>";
+      t += "<tr>";
+      t += "<td>4</td><td>5</td><td>6</td>";
+      t += "</tr>";
+      t += "</table>";
 
-</head>
-<body>
-
-</body>
+      document.write(t);
+      console.log("t", t);
+    </script>
+  </head>
+  <body></body>
 </html>
