--- a/JavaScript/edu/2자바스크립트기초문법/basic/import_c.html
+++ b/JavaScript/edu/2자바스크립트기초문법/basic/import_c.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Insert title here</title>
 
-	<!-- 외부파일(example.js)로 만들어 놓고 
+    <!-- 외부파일(example.js)로 만들어 놓고 
 		 example.js파일에 작성한 코드 내용을 현재 import_c.html파일로
 		 불러와 사용하자.
 	 -->
-	<script src="/JavaScript/JavaScript/study/2자바스크립트기초문법/js/example.js"></script>
-	
-
-</head>
-<body>
-
-</body>
+    <script src="/JavaScript/edu/2자바스크립트기초문법/js/example.js"></script>
+  </head>
+  <body></body>
 </html>
