--- a/JavaScript/edu/2자바스크립트기초문법/operator/operator.html
+++ b/JavaScript/edu/2자바스크립트기초문법/operator/operator.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Insert title here</title>
+  </head>
+  <body>
+    <script type="text/javascript">
+      var num1 = 15;
+      var num2 = 2;
+      var result;
 
-	<script type="text/javascript">
-		var num1 = 15;
-		var num2 = 2;
-		var result;
-		
-		result = num1 + num2;
-		document.write(result, "<br>"); //17
-		
-		result = num1 - num2;
-		document.write(result, "<br>"); //13
-		
-		result = num1 * num2;
-		document.write(result, "<br>"); //30
-		
-		result = num1 / num2; 
-		document.write(result, "<br>"); //7.5
-		
-		result = num1 % num2;
-		document.write(result, "<br>"); //1
-		
-	
-	</script>
+      result = num1 + num2;
+      document.write(result, "<br>"); //17
 
+      result = num1 - num2;
+      document.write(result, "<br>"); //13
 
-</body>
+      result = num1 * num2;
+      document.write(result, "<br>"); //30
+
+      result = num1 / num2;
+      document.write(result, "<br>"); //7.5
+
+      result = num1 % num2;
+      document.write(result, "<br>"); //1
+      document.write(+"<br>");
+    </script>
+  </body>
 </html>
-
-
-
