--- a/JavaScript/edu/2자바스크립트기초문법/var/var_ex1_c.html
+++ b/JavaScript/edu/2자바스크립트기초문법/var/var_ex1_c.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Insert title here</title>
+  </head>
+  <body>
+    <script type="text/javascript">
+      var box; //box라는 이름의 변수 메모리 선언
+      box = 100; //box 변수에 100을 저장
+      box = 30; //변수 box에 저장되어 있었던 100은 삭제되고, 30이 최종 저장됨
 
-	<script type="text/javascript">
-		var box;  //box라는 이름의 변수 메모리 선언
-			box = 100; //box 변수에 100을 저장
-			box = 30;  //변수 box에 저장되어 있었던 100은 삭제되고, 30이 최종 저장됨 
-			
-			document.write(box);//변수 box에 저장된 30을 웹브라우저화면에 출력
-	
-	
-	</script>
-
-</body>
+      document.write(box); //변수 box에 저장된 30을 웹브라우저화면에 출력
+      document.write(box1);
+      let box1 = 3;
+    </script>
+  </body>
 </html>
