--- a/JavaScript/edu/site/mycode/index.html
+++ b/JavaScript/edu/site/mycode/index.html
@@ -14,17 +14,69 @@
                 <h1>Dream Jeju</h1>
             </div>
             <nav>
-
-            </nav>
+                <ul id="topMenu">
+                  <li><a href="#">단체 여행 <span>▼</span></a>
+                    <ul>
+                      <li><a href="#">회사 연수</a></li>
+                      <li><a href="#">수학 여행</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">맞춤 여행  <span>▼</span></a>
+                    <ul>
+                      <li><a href="#">4.3 평화 기행</a></li>
+                      <li><a href="#">곶자왈 체험</a></li>
+                      <li><a href="#">힐링 워크샵</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">갤러리</a></li>
+                  <li><a href="#">문의하기</a></li>
+                </ul>
+              </nav>
         </header>
-        <div id="slideShow"></div>
+        <div id="slideShow">
+            <div id="slides">
+                <img src="/JavaScript/JavaScript/edu/site/images/photo-1.jpg" alt="">
+                <img src="/JavaScript/JavaScript/edu/site/images/photo-2.jpg" alt="">
+                <img src="/JavaScript/JavaScript/edu/site/images/photo-3.jpg" alt="">
+                <button id="prev">&lnag;</button>
+                <button id="next">&rang;</button>
+            </div>
+        </div>
         <div id="content">
-            <div id="tabMenu"></div>
+            <div id="tabMenu">
+                <input type="radio" id="tab1" name="tabs" checked>
+                <label for="tab1">공지사항</label>
+                <input type="radio" id="tab2" name="tabs" checked>
+                <label for="tab2">갤러리</label>
+            
+                <div id="notice class=tabContent">
+                    <h2>공지사항 내용입니다</h2>
+                    <ul>
+                        <li>사무실을 이전했습니다</li>
+                        <li>[참가모집] 카약 체험에 초대합니다</li>
+                        <li>[참가모집] 여름방학기간, 체험단 모집</li>
+                        <li>겨울, 추천 여행지</li>
+                        <li>가을, 추천 여행지</li>
+                    </ul>
+                </div>
+                <div id="gallery" class="tabContent">
+                    <h2>갤러리 내용</h2>
+                    <ul>
+                        <li><img src="/JavaScript/JavaScript/edu/site/images/img-1.jpg"></li>
+                        <li><img src="/JavaScript/JavaScript/edu/site/images/img-2.jpg"></li>
+                        <li><img src="/JavaScript/JavaScript/edu/site/images/img-3.jpg"></li>
+                        <li><img src="/JavaScript/JavaScript/edu/site/images/img-1.jpg"></li>
+                        <li><img src="/JavaScript/JavaScript/edu/site/images/img-2.jpg"></li>
+                        <li><img src="/JavaScript/JavaScript/edu/site/images/img-3.jpg"></li>
+                    </ul>
+                </div>
+            </div>
             <div id="links"></div>
         </div>
         <footer>
 
         </footer>
     </div>
+    <script src="/JavaScript/JavaScript/edu/site/mycode/slideshow.js"></script>
 </body>
 </html>
