--- a/JavaScript/edu/site/mycode/index.html
+++ b/JavaScript/edu/site/mycode/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dream Jeju</title>
-    <link rel="stylesheet" href="/JavaScript/JavaScript/edu/site/mycode/css/style.css">
+    <link rel="stylesheet" href="/JavaScript/JavaScript/edu/site/mycode/style.css">
 </head>
 <body>
     <div id="container">
@@ -71,10 +71,48 @@
                     </ul>
                 </div>
             </div>
-            <div id="links"></div>
+            <div id="links">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <span id ="quick-icon1"></span>
+                            <p>평화기행</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span id="quick-icon2"></span>
+                            <p>힐링 워크숍</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span id="quick-icon3"></span>
+                            <p>문의하기</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <footer>
-
+            <div id="bottomMenu">
+                <ul>
+                    <li><a href="#">회사 소개</a></li>
+                    <li><a href="#">개인정보처리방침</a></li>
+                    <li><a href="#">여행약관</a></li>
+                    <li><a href="#">사이맵</a></li>
+                </ul>
+            <div id="sns">
+                <ul>
+                    <li><a href="#"><img src="/JavaScript/JavaScript/edu/site/images/sns-1.png" alt=""></a></li>
+                    <li><a href="#"><img src="/JavaScript/JavaScript/edu/site/images/sns-2.png" alt=""></a></li>
+                    <li><a href="#"><img src="/JavaScript/JavaScript/edu/site/images/sns-3.png" alt=""></a></li>
+                </ul>
+            </div>
+            </div>
+            <div id="company">
+                <p>제주특별자치도 ***동 ***로 ***</p>
+            </div>
         </footer>
     </div>
     <script src="/JavaScript/JavaScript/edu/site/mycode/slideshow.js"></script>
