--- a/JavaScript/edu/site/mycode/index.html
+++ b/JavaScript/edu/site/mycode/index.html
@@ -37,8 +37,8 @@
     <div id="slideShow">
       <div id="slides">
         <img src="../images/photo-1.jpg" alt="">
-        <img src="../images/photo-1.jpg" alt="">
-        <img src="../images/photo-1.jpg" alt="">
+        <img src="../images/photo-2.jpg" alt="">
+        <img src="../images/photo-3.jpg" alt="">
         <button id="prev">&lang;</button>
         <button id="next">&rang;</button>
       </div>
@@ -116,6 +116,6 @@
     </footer>  
   </div> 
 
-  <script src="/slideshow.js"></script>
+  <script src="/JavaScript/JavaScript/edu/site/mycode/slideshow.js"></script>
 </body>
 </html>
