--- a/JavaScript/edu/4객체/window/popup.html
+++ b/JavaScript/edu/4객체/window/popup.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-  <script src="/JavaScript/edu/4객체/JS/math_ob2.js"></script>
-    </script>
+    <!--
+        window 객체의 close 메소드 : 열린 새로운 창을 닫히도록 하는 기능
+    -->
+    <button onclick="window.close();">팝업창 닫기</button>
   </body>
 </html>
