--- a/JavaScript/edu/4객체/window/window.html
+++ b/JavaScript/edu/4객체/window/window.html
@@ -6,7 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-  <script src="/JavaScript/edu/4객체/JS/math_ob2.js"></script>
-    </script>
+    <!--
+        button태그에 클릭이벤트 등록
+    -->
+    <button onclick="printInfo();">버튼</button>
+    <script src="/JavaScript/edu/4객체/JS/window.js"></script>
   </body>
 </html>
