--- a/JavaScript/edu/4객체/window/window3_1.html
+++ b/JavaScript/edu/4객체/window/window3_1.html
@@ -6,7 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-  <script src="/JavaScript/edu/4객체/JS/math_ob2.js"></script>
-    </script>
+    <script src="window3_1.js"></script>
   </body>
 </html>
