--- a/JavaScript/edu/5이벤트/event_object2.html
+++ b/JavaScript/edu/5이벤트/event_object2.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <button>클릭</button>
-    <script src="event_object1.js"></script>
+    <form action="">
+      <input type="text" />
+    </form>
+    <script src="event_object2.js"></script>
   </body>
 </html>
