--- a/JavaScript/edu/5이벤트/this.html
+++ b/JavaScript/edu/5이벤트/this.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <button>클릭</button>
-    <script src="event_object1.js"></script>
+    <p>text1</p>
+    <p>text2</p>
+    <p>text3</p>
+    <script src="this.js"></script>
   </body>
 </html>
