--- a/JavaScript/edu/Register.html
+++ b/JavaScript/edu/Register.html
@@ -93,7 +93,7 @@
       </tr>
       <tr>
         <td colspan="2" align="center">
-          <input type="button" value="가입" onclick="validateForm()" />
+          <input type="button" value="가입" />
         </td>
       </tr>
     </table>
