--- a/JQuery/03이벤트/keyboard_event.html
+++ b/JQuery/03이벤트/keyboard_event.html
@@ -11,8 +11,9 @@
 		  keypress()
 		  	선택한 요소에서 키보드 자판을 눌렀다 뗀 이벤트를 등록하는 메소드
 		  	
-		   차이점 : keypress()는  기능키(F1~F12, Alt, Ctrl, Shift,  화살표, Backspace, Caps Lock, 한/영, Tab등)
-		               에 대해서 이벤트를 발생시키지 않습니다.	
+		   차이점 : keypress()는  기능키(F1~F12, Alt, Ctrl, Shift,  
+		            화살표, Backspace, Caps Lock, 한/영, Tab등)
+		            에 대해서 이벤트를 발생시키지 않습니다.	
 	
 		- keyup()
 			키보드의 자판의 키가 눌러져 있다가 뗀 이벤트를 등록하는 메소드 
